@@ -7,6 +7,7 @@
    Hypo(pa)thetical commerical developers are asked to write the author a note,
    which might make his day. There is no warranty, express or implied. */
 
+#include <sys/time.h>
 #include "gifsicle.h"
 #include <string.h>
 #include <stdio.h>
